src/styles/style.css
:root {
  --primary-color: #dc262a;
  --secondary-color: #e91114;
  --white-color: #fff;
  --dark-color: #1d1d1d;
  --text-color: #0A121C;
  --twitter-color: #00aced;
  --linkedin-color: #0073a4;
  --github-color: #5a32a3;
	--background-color: hsla(15, 1%, 13%, 0.55);
}

* {
	padding: 0;
	margin: 0;
}

body {
	font-family: 'Poppins', sans-serif;
	background-color: white;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}


/*
  AppBar
*/

.app-bar {
	padding: 8px 16px;
	background-color: white;
	display: grid;
	grid-template-columns: auto 1fr auto;
	gap: 10px;
	position: sticky;
	top: 0;
	z-index: 99;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
}

.app-bar .app-bar__menu {
	display: flex;
	align-items: center;
}

.app-bar .app-bar__menu button {
	background-color: transparent;
	border: none;
	font-size: 28px;
	padding: 8px;
	cursor: pointer;
}

.app-bar .app-bar__brand {
	display: flex;
	align-items: center;
}

.app-bar .app-bar__brand h1 {
	color: #db0000;
	text-transform: uppercase;
	font-size: 22px;
	user-select: none;
}

.app-bar .app-bar__navigation {
	position: absolute;
	top: 50px;
	left: -180px;
	width: 150px;
	transition: all 0.3s;
	padding: 15px;
	background-color: white;
	overflow: hidden;
}

.app-bar .app-bar__navigation.open {
	left: 0;
}

.app-bar .app-bar__navigation ul li a {
	display: inline-block;
	text-decoration: none;
	color: var(--dark-color);
	padding: 12px;
	margin-bottom: 5px;
	width: 100%;
	background-color: #f2f2f2;
	border-radius: 5px;
}

.app-bar__navigation ul li a:hover {
	color: var(--primary-color);
}

#app-bar__link-active {
	border-bottom: 2px solid var(--primary-color);
  color: var(--dark-color);
  font-weight: bolder;
}

.app-bar__logo {
  width: 9em;
}

/*
  Main Content
*/

main {
	/* padding: 32px; */
	flex: 1;
}

.content {
	margin: 0 auto;
	min-height: 100%;
}

.content .content__heading {
	font-weight: normal;
}


/*
  Movies
*/

.movies {
	display: grid;
	grid-template-columns: 1fr;
	gap: 16px;
	margin: 32px 0;
}


/*
  Movie Item
*/

.movie-item {
	width: 100%;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	border-radius: 8px;
	overflow: hidden;
}

.movie-item__header {
	position: relative;
}

.movie-item .movie-item__header .movie-item__header__poster {
	width: 100%;
}

.movie-item .movie-item__header .movie-item__header__rating {
	position: absolute;
	padding: 8px;
	bottom: 20px;
	left: 0;
	display: inline-block;
	background-color: black;
	color: white;
}

.movie-item .movie-item__header .movie-item__header__rating .movie-item__header__rating__score {
	margin-left: 10px;
}

.movie-item .movie-item__content {
	padding: 16px;
}

.movie-item .movie-item__content h3 {
	margin: 0 0 10px 0;
}

.movie-item .movie-item__content h3 a {
	color: #db0000;
	text-decoration: none;
}

.movie-item .movie-item__content p {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-line-clamp: 4;
	/* number of lines to show */
	-webkit-box-orient: vertical;
}


/*
  Movie
*/

.movie {
	margin: 0 auto;
	width: 100%;
	max-width: 800px;
	display: grid;
	grid-template-columns: 1fr;
	gap: 18px 16px;
}

.movie .movie__poster {
	width: 100%;
	max-width: 400px;
}

.movie .movie__info h4 {
	margin: 8px 0;
}


/* 
	Hero
 */

.hero {
  /* z-index: 1; */
  margin-top: 3.8rem;
  height: 50vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
	left: 0;
}

.hero__image {
  position: absolute;
  width: 100vw;
	height: 70vh;
  z-index: -2;
  object-fit: cover;
	left:0;
}

.hero__title {
  color: var(--white-color);
  margin: 0 auto;
  font-size: xx-large;
  text-shadow: 2px 2px var(--dark-color);
  text-align: center;
  letter-spacing: .1em;
}

.hero__cta {
  text-align: center;
  text-decoration: none;
  background-color: var(--secondary-color);
  padding: .8em 2em;
  margin: 0 auto;
  margin-top: 2em;
  border-radius: .3em;
  font-size: large;
  color: var(--white-color);
  font-weight: bolder;
  letter-spacing: .2em;
}

.hero__cta:hover {
  color: var(--white-color);
  background-color: var(--primary-color);
}


/* 
	Resto
*/

.resto {
  width: 100vw;
  margin: 0 auto;
  padding: 2em 0;
  background-color: var(--white-color);
}

.resto__label {
  text-align: center;
  margin-bottom: 1.5em;
}

.resto__container {
  width: 90vw;
  margin: 0 auto;
}

.resto__list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.resto__info {
  position: relative;
  top: -4em;
  z-index: 1;
  background-color: transparent;
  padding: .5em 0 .5em 1.5em;
  color: var(--white-color);
  font-size: large;
  text-shadow: 1px 1px var(--text-color);
	background-color: var(--background-color);
	width: 9vw;
}

.resto__selector {
	text-decoration: none;
}

.resto__title {
  margin: 0.5em 0;
  color: var(--primary-color);
	text-decoration: none
}

.resto__about {
  margin: 0.5em 0;
}

.resto__about,
.resto__description {
  color: var(--text-color);
}

/* 
	Figure
 */

figure {
  margin: 2em .5em;
  border: 1px solid #f1f1f1;
  padding: 10px;
}

figure img {
  width: 100%;
  height: 330px;
  object-fit: cover;
}

figure:hover {
  box-shadow: 5px 5px 11px #d9d9d9,
    -5px -5px 11px #e7e7e7;
}

figure p {
  line-height: 1.5em;
}

/*
  Footer
*/

footer {
  margin-top: 2em;
  padding: 2em 0;
  border-top: 1px solid #d9d9d9;
  color: var(--text-color);
	background-color: var(--white-color);
}

.footer__content {
  text-align: center;
}

.footer__copyright {
  margin: 1em 0 2em 0;
}

.footer__social-media-icons a {
  padding: 0.5em;
  margin: 1.5em 0.5em 0 0;
  width: 4em;
  border-radius:	 0.3em;
  text-decoration: none;
}

.social-icon-twitter {
  color: var(--twitter-color);
}

.social-icon-linkedin {
  color: var(--linkedin-color);
}

.social-icon-github {
  color: var(--github-color);
}

.social-icon-twitter:hover {
  background-color: var(--twitter-color);
  color: white;
}

.social-icon-linkedin:hover {
  background-color: var(--linkedin-color);
  color: white;
}

.social-icon-github:hover {
  background-color: var(--github-color);
  color: white;
}

